--- a/Lager App/Pages/NewArticel.razor
+++ b/Lager App/Pages/NewArticel.razor
@@ -2,7 +2,7 @@
 <PageTitle>NewArticel</PageTitle>
 @using Lager_App.Model
 @using Lager_App.Service
-@inject ArticelService service
+@inject IArticelService service
 @inject NavigationManager navigationManager
 
 <div class="m-2 text-center">
