--- a/Lager App/Pages/BookoutArticel.razor
+++ b/Lager App/Pages/BookoutArticel.razor
@@ -2,7 +2,7 @@
 @using Lager_App.Model
 @using Lager_App.Service
 
-@inject ArticelService ArticelService
+@inject IArticelService ArticelService
 @inject NavigationManager NavigationManager
 
 
