--- a/Lager App/Pages/ChangeArticel.razor
+++ b/Lager App/Pages/ChangeArticel.razor
@@ -3,7 +3,7 @@
 @using Lager_App.Service
 
 
-@inject ArticelService ArticelService
+@inject IArticelService ArticelService
 @inject NavigationManager NavigationManager
 
 
