--- a/Lager App/Pages/Index.razor
+++ b/Lager App/Pages/Index.razor
@@ -1,7 +1,7 @@
 ﻿@page "/"
 @using Lager_App.Model
 @using Lager_App.Service
-@inject ArticelService articelService
+@inject IArticelService articelService
 @inject NavigationManager navigationManager
 
 <div class="m-2 text-center">
